# Micro_TCP

./: .gitignore  CMakeLists.txt  LICENSE  MicroTCP concept ideads.odt  Notes_for_future_development.odt  README.md  TODO.txt  et --hard HEAD  iwyu_mapping.imp  wireshark_dissector.lua
.cached_code/: circle_buffer.c  old_time_wait.c  rrb.c  segment_io_data.c  shutdown_active_part.c
.playground/: microtcp_settings_prompts.c  smart_assert.h  test.c
build2/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
build2/executables/: miniredis_client.out  miniredis_server.out
build2/lib/: Makefile  cmake_install.cmake
build2/lib/src/: Makefile  cmake_install.cmake
build2/lib/src/core/: Makefile  cmake_install.cmake
build2/lib/src/fsm/: Makefile  cmake_install.cmake
build2/lib/src/settings/: Makefile  cmake_install.cmake
build2/test/: Makefile  cmake_install.cmake
build2/test/src/: Makefile  cmake_install.cmake
build2/test/src/miniredis_demo/: Makefile  cmake_install.cmake
build2/utils/: Makefile  cmake_install.cmake
build2/utils/src/: Makefile  cmake_install.cmake
build2/utils/src/logging/: Makefile  cmake_install.cmake
cached_code/: circle_buffer.h  circle_buffer_unit_tests.c
lib/: CMakeLists.txt  circle_buffer.c  circle_buffer.h  circular_buffer.c  microtcp.c  microtcp.h  microtcp_core_macros.h  microtcp_core_utils.c  microtcp_core_utils.h
lib/include/: microtcp.h  microtcp_core.h  microtcp_core_macros.h  microtcp_core_utils.h  microtcp_defines.h  microtcp_helper_functions.h  microtcp_helper_macros.h  microtcp_prompt_util.h  microtcp_settings.h
lib/include/core/: control_segments_io.h  microtcp_recv_impl.h  misc.h  receive_ring_buffer.h  receiver_thread.h  recv_impl.h  resource_allocation.h  segment_io.h  segment_processing.h  send_queue.h  socket_stats_updater.h
lib/include/fsm/: microtcp_fsm.h
lib/include/settings/: microtcp_settings.h  microtcp_settings_prompts.h
lib/include/state_machines/: state_machines.h
lib/src/: CMakeLists.txt  microtcp.c  microtcp_core.c  microtcp_core_utils.c  microtcp_helper_functions.c  microtcp_settings.c  receive_window.c
lib/src/core/: CMakeLists.txt  a.out  control_segments_io.c  microtcp_recv_impl.c  misc.c  receive_ring_buffer.c  receiver_thread.c  recv_impl.c  resource_allocation.c  segment_io.c  segment_io_control.c  segment_io_data.c  segment_io_internal.h  segment_io_internal.h.gch  segment_io_internal.h.pch  segment_processing.c  send_queue.c  socket_stats_updater.c
lib/src/fsm/: CMakeLists.txt  fsm_accept.c  fsm_common.c  fsm_common.h  fsm_common.h.gch  fsm_common.h.pch  fsm_connect.c  fsm_receive.c  fsm_send.c  fsm_shutdown.c  fsm_shutdown_active.c  fsm_shutdown_passive.c
lib/src/settings/: CMakeLists.txt  microtcp_settings.c  microtcp_settings_common.h  microtcp_settings_common.h.gch  microtcp_settings_common.h.pch  microtcp_settings_prompts.c
lib/src/state_machines/: CMakeLists.txt  accept_state_machine.c  connect_state_machine.c  shutdown_state_machine.c  state_machines_common.h
playground/: a.out  clear.c  main.c  new.c  pthread_exaple.c  test_boxes.c
resources/: input_file_generator.py
test/: CMakeLists.txt  circle_buffer_unit_tests.c  test_microtcp_client.c  test_microtcp_client.old.c  test_microtcp_server copy.c  test_microtcp_server.c  test_microtcp_server.old.c
test/demo1/: CMakeLists.txt  demo1_common.h  microtcp_client_demo1.c  microtcp_server_demo1.c
test/include/: demo_common.h
test/include/miniredis_demo/: miniredis.h  miniredis_commands.h  registry.h
test/mini_redis_demo/: CMakeLists.txt  mini_redis_server.c  registry.c  registry.h
test/src/: CMakeLists.txt
test/src/demo1/: CMakeLists.txt  microtcp_client_demo1.c  microtcp_server_demo1.c
test/src/mini_redis_demo/: CMakeLists.txt  mini_redis_client.c  mini_redis_server.c  registry.c
test/src/miniredis_demo/: CMakeLists.txt  common_source_code.h  miniredis_client.c  miniredis_commands.c  miniredis_server.c  registry.c
utils/: CMakeLists.txt  crc32.h
utils/allocator/: allocator.h
utils/include/: cli_color.h  crc32.h  microtcp_common_macros.h  microtcp_defines.h  microtcp_helper_functions.h  microtcp_helper_macros.h  microtcp_helpers.h  microtcp_macro_functions.h  microtcp_prompt_util.h  smart_assert.h  status.h
utils/include/allocator/: allocator.h  allocator_macros.h
utils/include/logging/: logger.h  logger_options.h  microtcp_fsm_logger.h  microtcp_logger.h
utils/logging/: CMakeLists.txt  cli_color.h  logger.c  logger.h
utils/src/: CMakeLists.txt  microtcp_helper_functions.c  microtcp_helpers.c  microtcp_prompt_util.c
utils/src/logging/: CMakeLists.txt  logger.c  logger_options.c  microtcp_fsm_logger.c  microtcp_logger.c  microtcp_logger_options.c  microtcp_logging_colors.h  microtcp_logging_colors.h.gch  microtcp_logging_colors.h.pch
