add_library(registry STATIC registry.c)
target_include_directories(registry PUBLIC ${CMAKE_SOURCE_DIR}/utils/include)
target_include_directories(registry PUBLIC ${CMAKE_SOURCE_DIR}/test/include)

add_executable(mini_redis_client.out mini_redis_client.c)
add_executable(mini_redis_server.out mini_redis_server.c)
target_include_directories(mini_redis_client.out PUBLIC ${CMAKE_SOURCE_DIR}/lib/include)
target_include_directories(mini_redis_client.out PUBLIC ${CMAKE_SOURCE_DIR}/test/include)
target_include_directories(mini_redis_server.out PUBLIC ${CMAKE_SOURCE_DIR}/lib/include)
target_include_directories(mini_redis_server.out PUBLIC ${CMAKE_SOURCE_DIR}/test/include)

target_link_libraries(mini_redis_client.out microtcp)
target_link_libraries(mini_redis_server.out microtcp)
target_link_libraries(mini_redis_server.out registry)
target_link_libraries(mini_redis_server.out microtcp_settings)
